 o getGrid returns an array instead of a matrix [2014-05-16 Fri]
 o plotFeatures(..., what = "all") gains a new argument: "ionmobilty" to plot
   m/z vs ionmobility as well. [2014-05-16 Fri]
 o plotGrid gets a new argument "maindim" to decided which of the three
   dimension should be used. [2014-05-16 Fri]
 o add {set,get}ImDiff [2014-05-16 Fri]

CHANGES IN VERSION 1.7.1
------------------------
 o add createUniquePeptideDbRds (regards #55) [2014-04-29 Tue]
 o allow to use an RDS instead of a fasta file as 'Unique Peptides Database';
   closes #55 [2014-04-29 Tue]
 o add removePrecursor and tolerance argument to loadSpectrumXmlFiles and
   loadFragmentCsvFiles; closes #59 [2014-04-30 Wed]
 o introduce IisL argument to dbUniquePeptideSet which treats I/L as same
   aminoacid if IisL == TRUE (default: IisL = FALSE);
   closes #60 [2014-04-30 Wed]
 o introduce filterFragments and plotCumulativeNumberOfFragments method.
   [2014-05-08 Thu]
 o add plotCrossMatchingDiff and a `what = "diff"` argument to
   filterMatchedEMRTsByCommonPeaks [2014-05-09 Fri]
 o remove plotCrossMatchingSummary, plotCrossMatchingDiff,
   plotCumulativeNumberOfFragments,
   {get,set}CrossMatchingMinimalNumberOfCommonPeaks and
   filterMatchedEMRTsByCommonPeaks [2014-05-11 Sun]
 o change plotCrossMatchingPerformance [2014-05-11 Sun]
 o add filterUniqueMatches and filterNonUniqueMatches [2014-05-11 Sun]
 o extract the ion that is used for identification (isFid == 1) from the Pep3D
   file instead of the first instance [2014-05-13 Tue]
 o add basic vignette for the ion mobility [2014-05-14 Wed]
 o add basic vignette for the fragment matching workflow [2014-05-15 Thu]
 o add loadSpectrumXmlFiles and loadFragmentCsvFiles method [2014-04-23 Wed]
 o add crossMatching, setCrossMatchingPpmTolerance and
   getCrossMatchingPpmTolerance method [2014-04-23 Wed]
 o add plotCrossMatching method  [2014-04-24 Thu]
 o add plotCrossMatchingSummary [2014-04-25 Fri]